# deja_q

./: README.md  pyproject.toml
deja_q/: __init__.py  bot.py  message_handler.py  ollama_client.py  vector_store.py
tests/: test_ollama_client.py  test_vector_store.py
